tests/grammar/snapshots/r#mod__grammar__alpha034__double_dollar_whitespace.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$$ \\n\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
]
