tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"$$ failed {}\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [],
                            Some(
                                (
                                    Handle(
                                        (
                                            "failed",
                                            3..9,
                                        ),
                                        [],
                                    ),
                                    3..12,
                                ),
                            ),
                        ),
                        0..12,
                    ),
                ),
                0..12,
            ),
        ),
        0..12,
    ),
]
