tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"foo() failed {}\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [],
                            (
                                "foo",
                                0..3,
                            ),
                            [],
                            Some(
                                (
                                    Handle(
                                        (
                                            "failed",
                                            6..12,
                                        ),
                                        [],
                                    ),
                                    6..15,
                                ),
                            ),
                        ),
                        0..15,
                    ),
                ),
                0..15,
            ),
        ),
        0..15,
    ),
]
