tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"$$?\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [],
                            Some(
                                (
                                    Propagate,
                                    2..3,
                                ),
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ),
        0..3,
    ),
]
