tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"fun func(a) {}\"))"
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                0..3,
            ),
            (
                "fun",
                0..3,
            ),
            (
                "func",
                4..8,
            ),
            [
                (
                    Generic(
                        (
                            "a",
                            9..10,
                        ),
                    ),
                    9..10,
                ),
            ],
            None,
            [],
        ),
        0..14,
    ),
]
